Try to fix display issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,8 +31,8 @@ body {
   background-color: #efede1; /* #FFFBF5; */
 }
 
-h1, h2, h3, h4, div, p, ul, li, a, figure, figcaption {
-  word-wrap: break-word;
+h1, h2, h3, h4, div, p, ul, li, a, span, blockquote, figure, figcaption {
+  word-wrap: break-word !important;
 }
 
 .top-section {
